@@ -1,3 +1,7 @@
+2011-10-04  Peter Breitenlohner  <peb@mp.mpg.de>
+
+	* texmfmp.c (calledit): More changes to reduce diffs with W32TeX.
+
 2011-10-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* texmfmp.c: write (sock, buff, n) and send (sock, buff, n, 0)
